--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "memory-game",
   "version": "1.0.0",
-  "description": "Simple memory game.",
-  "main": "src/index.js",
+  "description": "Simple memory game",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/rbelcher11/memory-game/issues"
   },
-  "homepage": "https://github.com/rbelcher11/memory-game#readme"
+  "homepage": "https://github.com/rbelcher11/memory-game#readme",
+  "devDependencies": {
+    "webpack": "^4.41.5"
+  }
 }
