--- a/package.json
+++ b/package.json
@@ -1,22 +1,37 @@
 {
   "name": "memory-game",
   "version": "1.0.0",
-  "description": "Simple memory game",
-  "main": "index.js",
+  "description": "memory game",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --stage local --debug --output-pathinfo --mode development --progress --color"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rbelcher11/memory-game.git"
+    "url": "git+https://github.com/rbelcher/minesweeper.git"
   },
-  "author": "Ryan Belcher",
+  "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rbelcher11/memory-game/issues"
+    "url": "https://github.com/rbelcher/minesweeper/issues"
   },
-  "homepage": "https://github.com/rbelcher11/memory-game#readme",
+  "homepage": "https://github.com/rbelcher/minesweeper#readme",
   "devDependencies": {
-    "webpack": "^4.41.5"
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.4.0",
+    "file-loader": "^5.0.2",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^0.9.0",
+    "webpack": "^5.45.1",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "core-js": "^3.6.0",
+    "minimist": "^1.2.5"
   }
 }
